pref:loading change

--- a/src/main/resources/lang/message.properties
+++ b/src/main/resources/lang/message.properties
@@ -1,1 +1,1 @@
-banner.welcome = Welcome to use Mohist Banner!
+banner.launch.welcomemessage = Welcome to Mohist Banner ! - Mohist Developement Group
