add some command,fix mixin error

--- a/src/main/resources/lang/message.properties
+++ b/src/main/resources/lang/message.properties
@@ -1,1 +1,17 @@
-banner.launch.welcomemessage = Welcome to Mohist Banner ! - Mohist Developement Group
+pluginscommand.des=Gets a list of plugins running on the server
+pluginscommand.1=Plugins
+pluginscommand.load=§6/{0} load <plugin> §b- §aLoads a plugin (File name)
+pluginscommand.unload=§6/{0} unload <plugin> §b- §aUnloads a plugin (Plugin name)
+pluginscommand.reload=§6/{0} reload <plugin> §b- §aUnloads and loads a plugin (Plugin name)
+pluginscommand.loaded=§a{0} {1} loaded successfully.
+pluginscommand.unloaded=§a{0} {1} unloaded successfully.
+pluginscommand.reloaded=§a{0} reloaded successfully.
+pluginscommand.noplugin=§cNo such plugin: {0}
+pluginscommand.nofile=§cNo such file: {0}
+pluginscommand.noyml=§cJar file doesn't contain a plugin.yml file: {0}.jar
+pluginscommand.alreadyloaded=§c{0} is already loaded!
+pluginscommand.notload=§cFailed to load {0}! (Check console for details.)
+pluginscommand.notunload=§cFailed to unload {0}! (Check console for details.)
+pluginscommand.nojar=§c{0}'s jar file is missing!
+pluginscommand.unloaderror=§cAn error occurred while unloading {0}!
+pluginscommand.reloaderror=§cAn error occurred while reloading {0}!
