--- a/src/main/resources/lang/message_zh_CN.properties
+++ b/src/main/resources/lang/message_zh_CN.properties
@@ -1,1 +1,16 @@
-banner.welcome = 欢迎使用Banner!
+pluginscommand.des=获取服务器上正在运行的插件
+pluginscommand.1=插件列表
+pluginscommand.load=§6/{0} load <plugin> §b- §a加载一个插件 (文件名)
+pluginscommand.unload=§6/{0} unload <plugin> §b- §a卸载一个插件 (插件名)
+pluginscommand.reload=§6/{0} reload <plugin> §b- §a重新加载一个插件 (插件名)
+pluginscommand.loaded=§a{0} {1} 加载成功。
+pluginscommand.unloaded=§a{0} {1} 卸载成功。
+pluginscommand.reloaded=§a{0} 重载成功。
+pluginscommand.noplugin=§c没有这个插件: {0}
+pluginscommand.nofile=§c没有这个文件: {0}
+pluginscommand.noyml=§cJar 文件中不包含 plugin.yml 文件： {0}.jar
+pluginscommand.alreadyloaded=§c{0} 已被加载!
+pluginscommand.notload=§c加载 {0} 失败! (查看控制台以获取详细信息)
+pluginscommand.notunload=§c卸载 {0} 失败! (查看控制台以获取详细信息)
+pluginscommand.nojar=§c{0} 的 jar 文件丢失!
+pluginscommand.unloaderror=§c卸载 {0} 时发生错误!
