--- a/src/main/resources/lang/message_zh_CN.properties
+++ b/src/main/resources/lang/message_zh_CN.properties
@@ -1,3 +1,20 @@
+libraries.checking.start=检查库文件中，请稍等...
+libraries.check.end=库文件检查完成，未发现问题 :)
+file.download.nook=下载文件 {0} 失败 :(
+file.download.nook.md5={0} 下载失败，因为此文件的MD5是 {1}，而它应该是 {2}。 出于安全原因，该文件已被删除。
+download.file=下载文件 {0} ，大小 {1}
+download.file.ok=下载文件 {0} 完成
+banner.launch.welcomemessage=欢迎来到 1.19.4 ! - Mohist开发组
+banner.start.server.error=服务器启动时遇到一个问题。你可以从Mohist的GitHub或Discord寻求支持
+eula=你需要同意EULA才能继续启动服务器。输入“true”同意
+eula.text=将下面的值改为“true”即代表你同意EULA({0})
+file.download.percentage=下载 {0} - {1}%
+libraries.global.percentage=总进度 >
+update.check=检查更新中...
+update.stopcheck=如果不想启用更新检查，在banner-config/banner.yml中设置“check_update”为“false”
+update.latest=未发现更新。最新版本：({0})，当前版本：({1})
+update.detect=最新版本：{0}，当前版本：{1}。最新版本构建于{2}，你应该升级到最新版本来修复最近的bug！
+check.update.noci=[!] 无法连接Mohist Web服务
 pluginscommand.des=获取服务器上正在运行的插件
 pluginscommand.1=插件列表
 pluginscommand.load=§6/{0} load <plugin> §b- §a加载一个插件 (文件名)
