--- a/src/main/resources/lang/message_fr_FR.properties
+++ b/src/main/resources/lang/message_fr_FR.properties
@@ -30,3 +30,4 @@ pluginscommand.notunload=§cImpossible d''arrêter {0}\! (Vérifiez la console pour
 pluginscommand.nojar=Le fichier jar de {0} est manquant\!
 pluginscommand.unloaderror=§cUne erreur s''est produite lors de l''arrêt de {0}\!
 pluginscommand.reloaderror=§cUne erreur est survenue lors du rechargement de {0}\!
+load.libraries=En attente des libraries, merci d'attendre...
