--- a/src/main/resources/lang/message_zh_TW.properties
+++ b/src/main/resources/lang/message_zh_TW.properties
@@ -15,3 +15,4 @@ update.stopcheck=如果不想啟用更新檢查，在mohist-config/mohist.yml中
 update.latest=未發現更新。最新版本：({0})，當前版本：({1})
 update.detect=最新版本：{0}，當前版本：{1}。最新版本構建於{2}，你應該升級到最新版本來修復最近的bug！
 check.update.noci=[!] 無法連接Mohist Web服務
+load.libraries=正載入依賴文件，請稍後…
