--- a/src/main/resources/lang/message_en_US.properties
+++ b/src/main/resources/lang/message_en_US.properties
@@ -32,3 +32,4 @@ pluginscommand.notunload=§cFailed to unload {0}! (Check console for details.)
 pluginscommand.nojar=§c{0}'s jar file is missing!
 pluginscommand.unloaderror=§cAn error occurred while unloading {0}!
 pluginscommand.reloaderror=§cAn error occurred while reloading {0}!
+load.libraries=Loading libraries, please wait...
