--- a/src/main/resources/lang/message_fr_FR.properties
+++ b/src/main/resources/lang/message_fr_FR.properties
@@ -1,33 +1,33 @@
-libraries.checking.start=Vérification des libraries, merci de patienter...
-libraries.check.end=Toutes les librairies sont ok :) !Mohist. Tentative de démarrage du serveur avec Java 16+, veuillez patienter... | Commande de lancement - {0}
-file.download.nook=Le téléchargement de {0} a échoué :(
-file.download.nook.md5=Le téléchargement de {0} a échoué car le MD5 de ce fichier est {1} alors qu''il devrait être {2}. Le fichier a été supprimé pour des raisons de sécurité.
-download.file=Téléchargement du fichier {0} avec une taille de {1}
-download.file.ok=Téléchargement du fichier {0} terminé !
-banner.launch.welcomemessage=Bienvenue sur Banner 1.19.4 ! - Equipe de développement de Mohist
-banner.start.server.error=Une erreur est survenue lors du démarrage du serveur. Tu peux de demander de l'aide au support de Mohist sur Discord ou GitHub.
+libraries.checking.start=VÃ©rification des libraries, merci de patienter...
+libraries.check.end=Toutes les librairies sont ok :) !Mohist. Tentative de dÃ©marrage du serveur avec Java 16+, veuillez patienter... | Commande de lancement - {0}
+file.download.nook=Le tÃ©lÃ©chargement de {0} a Ã©chouÃ© :(
+file.download.nook.md5=Le tÃ©lÃ©chargement de {0} a Ã©chouÃ© car le MD5 de ce fichier est {1} alors qu''il devrait Ãªtre {2}. Le fichier a Ã©tÃ© supprimÃ© pour des raisons de sÃ©curitÃ©.
+download.file=TÃ©lÃ©chargement du fichier {0} avec une taille de {1}
+download.file.ok=TÃ©lÃ©chargement du fichier {0} terminÃ© !
+banner.launch.welcomemessage=Bienvenue sur Mohist 1.19.4 ! - Equipe de dÃ©veloppement de Mohist
+banner.start.server.error=Une erreur est survenue lors du dÃ©marrage du serveur. Tu peux de demander de l'aide au support de Mohist sur Discord ou GitHub.
 eula=Tu dois accepter l'eula pour lancer ton serveur. Tape true dans la console pour continuer.
-eula.text=En changeant ce paramètre sur true, vous acceptez notre EULA ({0}).
-update.check=Vérifications des mises à jour...
-update.detect=La dernière version de Mohist est {0} mais vous avez {1}. La dernière version a été faite le {2}. Vous devriez mettre à jour Mohist pour corriger les bugs récents \!
-check.update.noci=[\!] Impossible de se connecter au ci pour vérifier les mises à jour ou impossible de télécharger la mise à jour.
-update.latest=Aucune mise à jour trouvée, dernière version \: ({0}) Version actuelle \: ({1})
-update.stopcheck=Si vous ne voulez pas activer la vérification automatique des mises à jour, définissez check_update dans banner-config/banner.yml à false
-pluginscommand.des=Obtient une liste des plugins exécutés sur le serveur et le gestionnaire de plugins
-pluginscommand.1=Plugins
-pluginscommand.load=§6/{0} load <plugin> §b- §aChargement du plugin (Nom du fichier)
-pluginscommand.unload=§6/{0} unload <plugin> §b- §aArrêt du plugin (Nom du fichier)
-pluginscommand.reload=§6/{0} reload <plugin> §b- §aRehargement du plugin (Nom du fichier)
-pluginscommand.loaded=§a{0} {1} a été chargé avec succès.
-pluginscommand.unloaded=§a{0} {1} a été arrêté avec succès.
-pluginscommand.reloaded=§a{0} a été rechargé avec succès.
-pluginscommand.noplugin=§cPas de plugin de ce type \: {0}
-pluginscommand.nofile=§cFichier introuvable \: {0}
-pluginscommand.noyml=§cLe fichier Jar ne contient pas de fichier plugin.yml \: {0}.jar
-pluginscommand.alreadyloaded=§c{0} est déjà chargé \!
-pluginscommand.notload=§cImpossible de charger {0}\! (Vérifiez la console pour plus de détails.)
-pluginscommand.notunload=§cImpossible d''arrêter {0}\! (Vérifiez la console pour plus de détails.)
+eula.text=En changeant ce paramÃ¨tre sur true, vous acceptez notre EULA ({0}).
+update.check=VÃ©rifications des mises Ã  jour...
+update.detect=La derniÃ¨re version de Banner est {0} mais vous avez {1}. La derniÃ¨re version a Ã©tÃ© faite le {2}. Vous devriez mettre Ã  jour Mohist pour corriger les bugs rÃ©cents \!
+check.update.noci=[\!] Impossible de se connecter au ci pour vÂ¨Â¦rifier les mises Â¨Â¤ jour ou impossible de tÂ¨Â¦lÂ¨Â¦charger la mise Â¨Â¤ jour.
+update.latest=Aucune mise Ã  jour trouvÃ©e, derniÃ¨re version \: ({0}) Version actuelle \: ({1})
+update.stopcheck=Si vous ne voulez pas activer la vÃ©rification automatique des mises Ã  jour, dÃ©finissez check_update dans mohist-config/mohist.yml Ã  false
+pluginscommand.des=Obtient une liste des plugins exÂ¨Â¦cutÂ¨Â¦s sur le serveur et le gestionnaire de plugins
+pluginscommand.des=Obtient une liste des plugins exÃ©cutÃ©s sur le serveur et le gestionnaire de plugins
+pluginscommand.load=Â§6/{0} load <plugin> Â§b- Â§aChargement du plugin (Nom du fichier)
+pluginscommand.unload=Â§6/{0} unload <plugin> Â§b- Â§aArrÃªt du plugin (Nom du fichier)
+pluginscommand.reload=Â§6/{0} reload <plugin> Â§b- Â§aRehargement du plugin (Nom du fichier)
+pluginscommand.loaded=Â§a{0} {1} a Ã©tÃ© chargÃ© avec succÃ¨s.
+pluginscommand.unloaded=Â§a{0} {1} a Ã©tÃ© arrÃªtÃ© avec succÃ¨s.
+pluginscommand.reloaded=Â§a{0} a Ã©tÃ© rechargÃ© avec succÃ¨s.
+pluginscommand.noplugin=Â§cPas de plugin de ce type \: {0}
+pluginscommand.nofile=Â§cFichier introuvable \: {0}
+pluginscommand.noyml=Â§cLe fichier Jar ne contient pas de fichier plugin.yml \: {0}.jar
+pluginscommand.alreadyloaded=Â§c{0} est dÃ©jÃ  chargÃ© \!
+pluginscommand.notload=Â§cImpossible de charger {0}\! (VÃ©rifiez la console pour plus de dÃ©tails.)
+pluginscommand.notunload=Â§cImpossible d''arrÃªter {0}\! (VÃ©rifiez la console pour plus de dÃ©tails.)
 pluginscommand.nojar=Le fichier jar de {0} est manquant\!
-pluginscommand.unloaderror=§cUne erreur s''est produite lors de l''arrêt de {0}\!
-pluginscommand.reloaderror=§cUne erreur est survenue lors du rechargement de {0}\!
+pluginscommand.unloaderror=Â§cUne erreur s''est produite lors de l''arrÃªt de {0}\!
+pluginscommand.reloaderror=Â§cUne erreur est survenue lors du rechargement de {0}\!
 load.libraries=En attente des libraries, merci d'attendre...
