--- a/src/main/resources/lang/message_ru_RU.properties
+++ b/src/main/resources/lang/message_ru_RU.properties
@@ -3,7 +3,7 @@ libraries.check.end=С библиотеками всё в порядке :) !
 file.download.nook=Загрузка {0} не удалась :(
 download.file=Загружается файл {0} размером {1}
 download.file.ok=Загрузка {0} окончена !
-banner.launch.welcomemessage=Приветствуем в Mohist 1.19.4 ! - Команда Разработки Mohist
+banner.launch.welcomemessage=Приветствуем в Banner 1.19.4 ! - Команда Разработки Mohist
 banner.start.server.error=При запуске сервера произошла ошибка. Вы можете обратиться за помощью с Mohist в Discord или на GitHub.
 eula=Вы должны согласиться с Пользовательским Соглашением, чтобы запустить сервер. Введите true чтобы продолжить.
 eula.text=Заменой этого параметра вы подтверждаете своё согласие с нашим Пользовательским Соглашением ({0}).
