--- a/src/main/resources/lang/message_fr_FR.properties
+++ b/src/main/resources/lang/message_fr_FR.properties
@@ -4,7 +4,7 @@ file.download.nook=Le téléchargement de {0} a échoué :(
 file.download.nook.md5=Le téléchargement de {0} a échoué car le MD5 de ce fichier est {1} alors qu''il devrait être {2}. Le fichier a été supprimé pour des raisons de sécurité.
 download.file=Téléchargement du fichier {0} avec une taille de {1}
 download.file.ok=Téléchargement du fichier {0} terminé !
-banner.launch.welcomemessage=Bienvenue sur Mohist 1.19.4 ! - Equipe de développement de Mohist
+banner.launch.welcomemessage=Bienvenue sur Banner 1.19.4 ! - Equipe de développement de Mohist
 banner.start.server.error=Une erreur est survenue lors du démarrage du serveur. Tu peux de demander de l'aide au support de Mohist sur Discord ou GitHub.
 eula=Tu dois accepter l'eula pour lancer ton serveur. Tape true dans la console pour continuer.
 eula.text=En changeant ce paramètre sur true, vous acceptez notre EULA ({0}).
