--- a/src/main/resources/lang/message_ru_RU.properties
+++ b/src/main/resources/lang/message_ru_RU.properties
@@ -1,11 +1,35 @@
 libraries.checking.start=Проверка библиотек, пожалуйста подождите...
 libraries.check.end=С библиотеками всё в порядке :) !
 file.download.nook=Загрузка {0} не удалась :(
+file.download.nook.md5=Загрузка {0} не удалась потому что MD5 этого файла равен {1}, а должен быть равен {2}. Файл был удален в целях безопасности.
 download.file=Загружается файл {0} размером {1}
 download.file.ok=Загрузка {0} окончена !
 banner.launch.welcomemessage=Приветствуем в Banner 1.19.4 ! - Команда Разработки Mohist
 banner.start.server.error=При запуске сервера произошла ошибка. Вы можете обратиться за помощью с Mohist в Discord или на GitHub.
 eula=Вы должны согласиться с Пользовательским Соглашением, чтобы запустить сервер. Введите true чтобы продолжить.
 eula.text=Заменой этого параметра вы подтверждаете своё согласие с нашим Пользовательским Соглашением ({0}).
-update.check=Проверка обновлений...
 file.download.percentage=Загружается {0} - {1}%
+libraries.global.percentage=Общий процент >
+update.check=Проверка обновлений...
+update.stopcheck=Если вы не хотите включать проверку обновлений, установите check_update в файле banner-config/banner.yml на false
+update.latest=Обновление не найдено, последняя версия: ({0}) текущая версия: ({1})
+update.detect=The latest Banner version is {0} but you have {1}. The latest version has been built on {2}. You should update to fix recent bugs !
+check.update.noci=[!] Не удается подключиться к веб-сервису Mohist.
+pluginscommand.des=Получен список запущенных плагинов
+pluginscommand.1=Плагины
+pluginscommand.load=§6/{0} load <plugin> §b- §aLoads a plugin (File name)
+pluginscommand.unload=§6/{0} unload <plugin> §b- §aUnloads a plugin (Plugin name)
+pluginscommand.reload=§6/{0} reload <plugin> §b- §aUnloads and loads a plugin (Plugin name)
+pluginscommand.loaded=§a{0} {1} успешно загружен.
+pluginscommand.unloaded=§a{0} {1} успешно выгружен.
+pluginscommand.reloaded=§a{0} успешно перезагружен.
+pluginscommand.noplugin=§cNo such plugin: {0}
+pluginscommand.nofile=§cNo such file: {0}
+pluginscommand.noyml=§cJar file doesn't contain a plugin.yml file: {0}.jar
+pluginscommand.alreadyloaded=§c{0} уже загружено!
+pluginscommand.notload=§cНе удалось загрузить {0}! (Проверьте консоль для получения подробностей.)
+pluginscommand.notunload=§cНе удалось выгрузить {0}! (Проверьте консоль для получения подробностей.)
+pluginscommand.nojar=§cОтсутствует {0} jar файлов!
+pluginscommand.unloaderror=§cПроизошла ошибка при выгрузке {0}!
+pluginscommand.reloaderror=§cПроизошла ошибка при перезагрузке {0}!
+load.libraries=Loading libraries, please wait...
