Add more translate

--- a/src/main/resources/lang/message.properties
+++ b/src/main/resources/lang/message.properties
@@ -33,3 +33,9 @@ pluginscommand.nojar=§c{0}'s jar file is missing!
 pluginscommand.unloaderror=§cAn error occurred while unloading {0}!
 pluginscommand.reloaderror=§cAn error occurred while reloading {0}!
 load.libraries=Loading libraries, please wait...
+lib.loading=Loading library 
+mc.server.starting=Starting minecraft server version {}
+mc.server.properties=Loading properties
+mc.server.game_type=Default game type: {}
+mc.server.start_on=Starting Minecraft server on {}:{}
+server.start.done=Done ({0})! For help, type "help" or "?"
