--- a/src/main/resources/lang/message_fr_FR.properties
+++ b/src/main/resources/lang/message_fr_FR.properties
@@ -31,3 +31,9 @@ pluginscommand.nojar=Le fichier jar de {0} est manquant\!
 pluginscommand.unloaderror=§cUne erreur s''est produite lors de l''arrêt de {0}\!
 pluginscommand.reloaderror=§cUne erreur est survenue lors du rechargement de {0}\!
 load.libraries=En attente des libraries, merci d'attendre...
+lib.loading=Loading library 
+mc.server.starting=Starting minecraft server version {}
+mc.server.properties=Loading properties
+mc.server.game_type=Default game type: {}
+mc.server.start_on=Starting Minecraft server on {}:{}
+server.start.done=Done ({0})! For help, type "help" or "?"
