--- a/src/main/resources/lang/message_ru_RU.properties
+++ b/src/main/resources/lang/message_ru_RU.properties
@@ -33,3 +33,9 @@ pluginscommand.nojar=§cОтсутствует {0} jar файлов!
 pluginscommand.unloaderror=§cПроизошла ошибка при выгрузке {0}!
 pluginscommand.reloaderror=§cПроизошла ошибка при перезагрузке {0}!
 load.libraries=Loading libraries, please wait...
+lib.loading=Loading library 
+mc.server.starting=Starting minecraft server version {}
+mc.server.properties=Loading properties
+mc.server.game_type=Default game type: {}
+mc.server.start_on=Starting Minecraft server on {}:{}
+server.start.done=Done ({0})! For help, type "help" or "?"
