--- a/src/main/resources/lang/message.properties
+++ b/src/main/resources/lang/message.properties
@@ -51,3 +51,7 @@ server.stopping=Stopping server
 server.saving.player=Saving players
 server.saving.world=Saving worlds
 server.hold.ckp=Can't keep up! Is the server overloaded? Running {}ms or {} ticks behind
+advancement.forgot=Forgot about advancement {}
+advancement.remove.told=Told to remove advancement {} but I don't know what that is
+advancement.list=Loaded {} advancements
+server.key.pair=Generating keypair
