--- a/src/main/resources/lang/message_zh_CN.properties
+++ b/src/main/resources/lang/message_zh_CN.properties
@@ -50,3 +50,7 @@ server.stopping=\u505C\u6B62\u670D\u52A1\u5668\u4E2D
 server.saving.player=\u4FDD\u5B58\u73A9\u5BB6\u6570\u636E\u4E2D
 server.saving.world=\u4FDD\u5B58\u4E16\u754C\u5B58\u6863\u4E2D
 server.hold.ckp=\u670D\u52A1\u5668\u5361\u987F! \u670D\u52A1\u5668\u662F\u5426\u8FC7\u8F7D? \u8FD0\u884C {}ms \u6216 {} ticks
+advancement.forgot=\u9057\u5FD8\u76F8\u5173\u8FDB\u5EA6 {}
+advancement.remove.told=\u544A\u77E5\u53BB\u79FB\u9664\u6210\u5C31 {} \u4F46\u6211\u5E76\u4E0D\u6E05\u695A\u600E\u4E48\u505A
+advancement.list=\u5DF2\u52A0\u8F7D {} \u6210\u5C31
+server.key.pair=\u751F\u6210\u5BC6\u94A5\u5BF9
