--- a/src/main/resources/lang/message_zh_CN.properties
+++ b/src/main/resources/lang/message_zh_CN.properties
@@ -54,3 +54,6 @@ advancement.forgot=\u9057\u5FD8\u76F8\u5173\u8FDB\u5EA6 {}
 advancement.remove.told=\u544A\u77E5\u53BB\u79FB\u9664\u6210\u5C31 {} \u4F46\u6211\u5E76\u4E0D\u6E05\u695A\u600E\u4E48\u505A
 advancement.list=\u5DF2\u52A0\u8F7D {} \u6210\u5C31
 server.key.pair=\u751F\u6210\u5BC6\u94A5\u5BF9
+spigot.lib.loading=[{}] \u52A0\u8F7D {} \u5E93\u6587\u4EF6\u4E2D... \u8BF7\u7B49\u5F85
+spigot.lib.found=[{}] \u627E\u5230\u5E93\u6587\u4EF6 {}
+spigot.lib.loaded=[{}] \u5DF2\u52A0\u8F7D\u5E93\u6587\u4EF6 {}
