--- a/src/main/resources/lang/message_zh_TW.properties
+++ b/src/main/resources/lang/message_zh_TW.properties
@@ -38,3 +38,6 @@ advancement.forgot=Forgot about advancement {}
 advancement.remove.told=Told to remove advancement {} but I don't know what that is
 advancement.list=Loaded {} advancements
 server.key.pair=Generating keypair
+spigot.lib.loading=[{}] Loading {} libraries... please wait
+spigot.lib.found=[{}] Found libraries {}
+spigot.lib.loaded=[{}] Loaded libraries {}
