--- a/src/main/resources/lang/message_ru_RU.properties
+++ b/src/main/resources/lang/message_ru_RU.properties
@@ -13,7 +13,7 @@ libraries.global.percentage=\u041E\u0431\u0449\u0438\u0439 \u043F\u0440\u043E\u0
 update.check=\u041F\u0440\u043E\u0432\u0435\u0440\u043A\u0430 \u043E\u0431\u043D\u043E\u0432\u043B\u0435\u043D\u0438\u0439...
 update.stopcheck=\u0415\u0441\u043B\u0438 \u0432\u044B \u043D\u0435 \u0445\u043E\u0442\u0438\u0442\u0435 \u0432\u043A\u043B\u044E\u0447\u0430\u0442\u044C \u043F\u0440\u043E\u0432\u0435\u0440\u043A\u0443 \u043E\u0431\u043D\u043E\u0432\u043B\u0435\u043D\u0438\u0439, \u0443\u0441\u0442\u0430\u043D\u043E\u0432\u0438\u0442\u0435 check_update \u0432 \u0444\u0430\u0439\u043B\u0435 banner-config/banner.yml \u043D\u0430 false
 update.latest=\u041E\u0431\u043D\u043E\u0432\u043B\u0435\u043D\u0438\u0435 \u043D\u0435 \u043D\u0430\u0439\u0434\u0435\u043D\u043E, \u043F\u043E\u0441\u043B\u0435\u0434\u043D\u044F\u044F \u0432\u0435\u0440\u0441\u0438\u044F: ({0}) \u0442\u0435\u043A\u0443\u0449\u0430\u044F \u0432\u0435\u0440\u0441\u0438\u044F: ({1})
-update.detect=The latest Banner version is {0} but you have {1}. The latest version has been built on {2}. You should update to fix recent bugs !
+update.detect=\u041F\u043E\u0441\u043B\u0435\u0434\u043D\u044F\u044F \u0432\u0435\u0440\u0441\u0438\u044F Banner - {0}, \u0430 \u0443 \u0432\u0430\u0441 {1}. \u041F\u043E\u0441\u043B\u0435\u0434\u043D\u044F\u044F \u0432\u0435\u0440\u0441\u0438\u044F \u0431\u044B\u043B\u0430 \u0441\u043E\u0431\u0440\u0430\u043D\u0430 {2}. \u0412\u0430\u043C \u0441\u043B\u0435\u0434\u0443\u0435\u0442 \u043E\u0431\u043D\u043E\u0432\u0438\u0442\u044C\u0441\u044F, \u0447\u0442\u043E\u0431\u044B \u0438\u0441\u043F\u0440\u0430\u0432\u0438\u0442\u044C \u043F\u043E\u0441\u043B\u0435\u0434\u043D\u0438\u0435 \u043E\u0448\u0438\u0431\u043A\u0438!
 check.update.noci=[!] \u041D\u0435 \u0443\u0434\u0430\u0435\u0442\u0441\u044F \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0438\u0442\u044C\u0441\u044F \u043A \u0432\u0435\u0431-\u0441\u0435\u0440\u0432\u0438\u0441\u0443 Mohist.
 pluginscommand.des=\u041F\u043E\u043B\u0443\u0447\u0435\u043D \u0441\u043F\u0438\u0441\u043E\u043A \u0437\u0430\u043F\u0443\u0449\u0435\u043D\u043D\u044B\u0445 \u043F\u043B\u0430\u0433\u0438\u043D\u043E\u0432
 pluginscommand.1=\u041F\u043B\u0430\u0433\u0438\u043D\u044B
@@ -32,12 +32,12 @@ pluginscommand.notunload=\u00A7c\u041D\u0435 \u0443\u0434\u0430\u043B\u043E\u044
 pluginscommand.nojar=\u00A7c\u041E\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0443\u0435\u0442 {0} jar \u0444\u0430\u0439\u043B\u043E\u0432!
 pluginscommand.unloaderror=\u00A7c\u041F\u0440\u043E\u0438\u0437\u043E\u0448\u043B\u0430 \u043E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u0432\u044B\u0433\u0440\u0443\u0437\u043A\u0435 {0}!
 pluginscommand.reloaderror=\u00A7c\u041F\u0440\u043E\u0438\u0437\u043E\u0448\u043B\u0430 \u043E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u043F\u0435\u0440\u0435\u0437\u0430\u0433\u0440\u0443\u0437\u043A\u0435 {0}!
-load.libraries=Loading libraries, please wait...
-mc.server.starting=Starting minecraft server version {}
-mc.server.properties=Loading properties
-mc.server.game_type=Default game type: {}
-mc.server.start_on=Starting Minecraft server on {}:{}
-server.start.done=Done ({0})! For help, type "help" or "?"
+load.libraries=\u0417\u0430\u0433\u0440\u0443\u0437\u043A\u0430 \u0431\u0438\u0431\u043B\u0438\u043E\u0442\u0435\u043A, \u043F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430 \u043F\u043E\u0434\u043E\u0436\u0434\u0438\u0442\u0435...
+mc.server.starting=\u0417\u0430\u043F\u0443\u0441\u043A Minecraft \u0441\u0435\u0440\u0432\u0435\u0440\u0430 \u043D\u0430 \u0432\u0435\u0440\u0441\u0438\u0438 {}
+mc.server.properties=\u0417\u0430\u0433\u0440\u0443\u0437\u043A\u0430 \u0441\u0432\u043E\u0439\u0441\u0442\u0432
+mc.server.game_type=\u0422\u0438\u043F \u0438\u0433\u0440\u044B \u043F\u043E \u0443\u043C\u043E\u043B\u0447\u0430\u043D\u0438\u044E: {}
+mc.server.start_on=\u0417\u0430\u043F\u0443\u0441\u043A \u0441\u0435\u0440\u0432\u0435\u0440\u0430 Minecraft \u043D\u0430 {}:{}
+server.start.done=\u0413\u043E\u0442\u043E\u0432\u043E ({0})! \u0414\u043B\u044F \u043F\u043E\u043B\u0443\u0447\u0435\u043D\u0438\u044F \u043F\u043E\u043C\u043E\u0449\u0438 \u0432\u0432\u0435\u0434\u0438\u0442\u0435 "help" \u0438\u043B\u0438 "?".
 server.warn.offline=**** SERVER IS RUNNING IN OFFLINE/INSECURE MODE!
 server.warn.offline.0=The server will make no attempt to authenticate usernames. Beware.
 server.warn.offline.1=While this makes the game possible to play without internet access, it also opens up the ability for hackers to connect with any username they choose.
@@ -55,3 +55,6 @@ advancement.forgot=Forgot about advancement {}
 advancement.remove.told=Told to remove advancement {} but I don't know what that is
 advancement.list=Loaded {} advancements
 server.key.pair=Generating keypair
+spigot.lib.loading=[{}] Loading {} libraries... please wait
+spigot.lib.found=[{}] Found libraries {}
+spigot.lib.loaded=[{}] Loaded libraries {}
