--- a/src/main/resources/lang/message_ru_RU.properties
+++ b/src/main/resources/lang/message_ru_RU.properties
@@ -38,23 +38,29 @@ mc.server.properties=\u0417\u0430\u0433\u0440\u0443\u0437\u043A\u0430 \u0441\u04
 mc.server.game_type=\u0422\u0438\u043F \u0438\u0433\u0440\u044B \u043F\u043E \u0443\u043C\u043E\u043B\u0447\u0430\u043D\u0438\u044E: {}
 mc.server.start_on=\u0417\u0430\u043F\u0443\u0441\u043A \u0441\u0435\u0440\u0432\u0435\u0440\u0430 Minecraft \u043D\u0430 {}:{}
 server.start.done=\u0413\u043E\u0442\u043E\u0432\u043E ({0})! \u0414\u043B\u044F \u043F\u043E\u043B\u0443\u0447\u0435\u043D\u0438\u044F \u043F\u043E\u043C\u043E\u0449\u0438 \u0432\u0432\u0435\u0434\u0438\u0442\u0435 "help" \u0438\u043B\u0438 "?".
-server.warn.offline=**** SERVER IS RUNNING IN OFFLINE/INSECURE MODE!
-server.warn.offline.0=The server will make no attempt to authenticate usernames. Beware.
-server.warn.offline.1=While this makes the game possible to play without internet access, it also opens up the ability for hackers to connect with any username they choose.
-server.warn.offline.2=To change this, set "online-mode" to "true" in the server.properties file.
-server.level.prepare=Preparing level "{}"
-server.region.prepare=Preparing start region for dimension {}
-server.chunk.saving=Saving chunks for level '{}'/{}
-server.chunk.saved=ThreadedAnvilChunkStorage ({}): All chunks are saved
-server.dimension.saved=ThreadedAnvilChunkStorage: All dimensions are saved
-server.stopping=Stopping server
-server.saving.player=Saving players
-server.saving.world=Saving worlds
-server.hold.ckp=Can't keep up! Is the server overloaded? Running {}ms or {} ticks behind
-advancement.forgot=Forgot about advancement {}
-advancement.remove.told=Told to remove advancement {} but I don't know what that is
-advancement.list=Loaded {} advancements
-server.key.pair=Generating keypair
-spigot.lib.loading=[{}] Loading {} libraries... please wait
-spigot.lib.found=[{}] Found libraries {}
-spigot.lib.loaded=[{}] Loaded libraries {}
+server.warn.offline=**** \u0421\u0415\u0420\u0412\u0415\u0420 \u0420\u0410\u0411\u041E\u0422\u0410\u0415\u0422 \u0412 \u0410\u0412\u0422\u041E\u041D\u041E\u041C\u041D\u041E\u041C/\u041D\u0415\u0411\u0415\u0417\u041E\u041F\u0410\u0421\u041D\u041E\u041C \u0420\u0415\u0416\u0418\u041C\u0415!
+server.warn.offline.0=\u0421\u0435\u0440\u0432\u0435\u0440 \u043D\u0435 \u0431\u0443\u0434\u0435\u0442 \u043F\u044B\u0442\u0430\u0442\u044C\u0441\u044F \u043F\u0440\u043E\u0432\u0435\u0440\u0438\u0442\u044C \u043F\u043E\u0434\u043B\u0438\u043D\u043D\u043E\u0441\u0442\u044C \u0438\u043C\u0435\u043D \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435\u0439. \u041E\u0441\u0442\u0435\u0440\u0435\u0433\u0430\u0439\u0442\u0435\u0441\u044C.
+server.warn.offline.1=\u0425\u043E\u0442\u044F \u044D\u0442\u043E \u0434\u0435\u043B\u0430\u0435\u0442 \u0438\u0433\u0440\u0443 \u0432\u043E\u0437\u043C\u043E\u0436\u043D\u043E\u0439 \u0431\u0435\u0437 \u0434\u043E\u0441\u0442\u0443\u043F\u0430 \u0432 \u0418\u043D\u0442\u0435\u0440\u043D\u0435\u0442, \u044D\u0442\u043E \u0442\u0430\u043A\u0436\u0435 \u043E\u0442\u043A\u0440\u044B\u0432\u0430\u0435\u0442 \u0432\u043E\u0437\u043C\u043E\u0436\u043D\u043E\u0441\u0442\u044C \u0434\u043B\u044F \u0445\u0430\u043A\u0435\u0440\u043E\u0432 \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0430\u0442\u044C\u0441\u044F \u043F\u043E\u0434 \u043B\u044E\u0431\u044B\u043C \u0432\u044B\u0431\u0440\u0430\u043D\u043D\u044B\u043C \u0438\u043C\u0438 \u0438\u043C\u0435\u043D\u0435\u043C \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F.
+server.warn.offline.2=\u0427\u0442\u043E\u0431\u044B \u0438\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u044D\u0442\u043E, \u0443\u0441\u0442\u0430\u043D\u043E\u0432\u0438\u0442\u0435 "online-mode" \u043D\u0430 "true" \u0432 \u0444\u0430\u0439\u043B\u0435 server.properties.
+server.level.prepare=\u0423\u0440\u043E\u0432\u0435\u043D\u044C \u043F\u043E\u0434\u0433\u043E\u0442\u043E\u0432\u043A\u0438 "{}"
+server.region.prepare=\u041F\u043E\u0434\u0433\u043E\u0442\u043E\u0432\u043A\u0430 \u043D\u0430\u0447\u0430\u043B\u044C\u043D\u043E\u0433\u043E \u0440\u0435\u0433\u0438\u043E\u043D\u0430 \u043A \u0438\u0437\u043C\u0435\u0440\u0435\u043D\u0438\u044E {}
+server.chunk.saving=\u0421\u043E\u0445\u0440\u0430\u043D\u0435\u043D\u0438\u0435 \u0447\u0430\u043D\u043A\u043E\u0432 \u0434\u043B\u044F \u0443\u0440\u043E\u0432\u043D\u044F '{}'/{}
+server.chunk.saved=ThreadedAnvilChunkStorage ({}): \u0412\u0441\u0435 \u0447\u0430\u043D\u043A\u0438 \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D\u044B
+server.dimension.saved=ThreadedAnvilChunkStorage: \u0412\u0441\u0435 \u0438\u0437\u043C\u0435\u0440\u0435\u043D\u0438\u044F \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D\u044B
+server.stopping=\u041E\u0441\u0442\u0430\u043D\u043E\u0432\u043A\u0430 \u0441\u0435\u0440\u0432\u0435\u0440\u0430
+server.saving.player=\u0421\u043E\u0445\u0440\u0430\u043D\u0435\u043D\u0438\u0435 \u0438\u0433\u0440\u043E\u043A\u043E\u0432
+server.saving.world=\u0421\u043E\u0445\u0440\u0430\u043D\u0435\u043D\u0438\u0435 \u043C\u0438\u0440\u043E\u0432
+server.hold.ckp=\u041D\u0435 \u0443\u0441\u043F\u0435\u0432\u0430\u0435\u043C! \u0421\u0435\u0440\u0432\u0435\u0440 \u043F\u0435\u0440\u0435\u0433\u0440\u0443\u0436\u0435\u043D? \u041E\u0442\u0441\u0442\u0430\u0432\u0430\u043D\u0438\u0435 \u043D\u0430 {}ms \u0438\u043B\u0438 {} \u0442\u0438\u043A\u043E\u0432
+advancement.forgot=\u0417\u0430\u0431\u044B\u043B \u043E \u0434\u043E\u0441\u0442\u0438\u0436\u0435\u043D\u0438\u0438 {}
+advancement.remove.told=\u041C\u043D\u0435 \u0441\u043A\u0430\u0437\u0430\u043B\u0438 \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u0434\u043E\u0441\u0442\u0438\u0436\u0435\u043D\u0438\u0435 {}, \u043D\u043E \u044F \u043D\u0435 \u0437\u043D\u0430\u044E, \u0447\u0442\u043E \u044D\u0442\u043E \u0442\u0430\u043A\u043E\u0435.
+advancement.list=\u0417\u0430\u0433\u0440\u0443\u0436\u0435\u043D\u043D\u044B\u0435 {} \u0434\u043E\u0441\u0442\u0438\u0436\u0435\u043D\u0438\u044F
+server.key.pair=\u0413\u0435\u043D\u0435\u0440\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435 \u043F\u0430\u0440\u044B \u043A\u043B\u044E\u0447\u0435\u0439
+spigot.lib.loading=[{}] \u0417\u0430\u0433\u0440\u0443\u0437\u043A\u0430 {} \u0431\u0438\u0431\u043B\u0438\u043E\u0442\u0435\u043A... \u043F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u043F\u043E\u0434\u043E\u0436\u0434\u0438\u0442\u0435
+spigot.lib.found=[{}] \u041D\u0430\u0439\u0434\u0435\u043D\u044B \u0431\u0438\u0431\u043B\u0438\u043E\u0442\u0435\u043A\u0438 {}
+spigot.lib.loaded=[{}] \u0417\u0430\u0433\u0440\u0443\u0436\u0435\u043D\u043D\u044B\u0435 \u0431\u0438\u0431\u043B\u0438\u043E\u0442\u0435\u043A\u0438 {}
+server.recipe.loaded=Loaded {} recipes
+banner.event_handler.register=Registering Banner Event Dispatchers...
+bukkit.plugin.loading.info=Loading Bukkit plugins, please wait...
+bukkit.plugin.loading=Loading %s
+bukkit.plugin.disabling=Disabling %s
+bukkit.plugin.enabling=Enabling
