--- a/src/main/resources/lang/message_zh_CN.properties
+++ b/src/main/resources/lang/message_zh_CN.properties
@@ -57,3 +57,9 @@ server.key.pair=\u751F\u6210\u5BC6\u94A5\u5BF9
 spigot.lib.loading=[{}] \u52A0\u8F7D {} \u5E93\u6587\u4EF6\u4E2D... \u8BF7\u7B49\u5F85
 spigot.lib.found=[{}] \u627E\u5230\u5E93\u6587\u4EF6 {}
 spigot.lib.loaded=[{}] \u5DF2\u52A0\u8F7D\u5E93\u6587\u4EF6 {}
+server.recipe.loaded=\u5DF2\u52A0\u8F7D {} \u914D\u65B9
+banner.event_handler.register=\u6B63\u5728\u6CE8\u518CBanner\u4E8B\u4EF6\u4F20\u9012\u5668...
+bukkit.plugin.loading.info=\u6B63\u5728\u52A0\u8F7DBukkit\u63D2\u4EF6, \u8BF7\u7B49\u5F85...
+bukkit.plugin.loading=\u6B63\u5728\u52A0\u8F7D %s
+bukkit.plugin.disabling=\u6B63\u5728\u7981\u7528 %s
+bukkit.plugin.enabling=\u6B63\u5728\u542F\u7528
