--- a/src/main/resources/lang/message_zh_TW.properties
+++ b/src/main/resources/lang/message_zh_TW.properties
@@ -11,7 +11,7 @@ eula.text=\u5C07\u4E0B\u9762\u7684\u503C\u6539\u70BA\u201Ctrue\u201D\u5373\u4EE3
 file.download.percentage=\u4E0B\u8F09 {0} - {1}%
 libraries.global.percentage=\u7E3D\u9032\u5EA6 >
 update.check=\u6AA2\u67E5\u66F4\u65B0\u4E2D...
-update.stopcheck=\u5982\u679C\u4E0D\u60F3\u555F\u7528\u66F4\u65B0\u6AA2\u67E5\uFF0C\u5728mohist-config/mohist.yml\u4E2D\u8A2D\u7F6E\u201Ccheck_update\u201D\u70BA\u201Cfalse\u201D
+update.stopcheck=\u5982\u679C\u4E0D\u60F3\u555F\u7528\u66F4\u65B0\u6AA2\u67E5\uFF0C\u5728banner-config/banner.yml\u4E2D\u8A2D\u7F6E\u201Ccheck_update\u201D\u70BA\u201Cfalse\u201D
 update.latest=\u672A\u767C\u73FE\u66F4\u65B0\u3002\u6700\u65B0\u7248\u672C\uFF1A({0})\uFF0C\u7576\u524D\u7248\u672C\uFF1A({1})
 update.detect=\u6700\u65B0\u7248\u672C\uFF1A{0}\uFF0C\u7576\u524D\u7248\u672C\uFF1A{1}\u3002\u6700\u65B0\u7248\u672C\u69CB\u5EFA\u65BC{2}\uFF0C\u4F60\u61C9\u8A72\u5347\u7D1A\u5230\u6700\u65B0\u7248\u672C\u4F86\u4FEE\u5FA9\u6700\u8FD1\u7684bug\uFF01
 check.update.noci=[!] \u7121\u6CD5\u9023\u63A5Mohist Web\u670D\u52D9
@@ -41,3 +41,9 @@ server.key.pair=Generating keypair
 spigot.lib.loading=[{}] Loading {} libraries... please wait
 spigot.lib.found=[{}] Found libraries {}
 spigot.lib.loaded=[{}] Loaded libraries {}
+server.recipe.loaded=Loaded {} recipes
+banner.event_handler.register=Registering Banner Event Dispatchers...
+bukkit.plugin.loading.info=Loading Bukkit plugins, please wait...
+bukkit.plugin.loading=Loading %s
+bukkit.plugin.disabling=Disabling %s
+bukkit.plugin.enabling=Enabling
