--- a/src/main/resources/lang/message_en_US.properties
+++ b/src/main/resources/lang/message_en_US.properties
@@ -58,3 +58,9 @@ server.key.pair=Generating keypair
 spigot.lib.loading=[{}] Loading {} libraries... please wait
 spigot.lib.found=[{}] Found libraries {}
 spigot.lib.loaded=[{}] Loaded libraries {}
+server.recipe.loaded=Loaded {} recipes
+banner.event_handler.register=Registering Banner Event Dispatchers...
+bukkit.plugin.loading.info=Loading Bukkit plugins, please wait...
+bukkit.plugin.loading=Loading %s
+bukkit.plugin.disabling=Disabling %s
+bukkit.plugin.enabling=Enabling
