--- a/src/main/resources/lang/message_fr_FR.properties
+++ b/src/main/resources/lang/message_fr_FR.properties
@@ -14,7 +14,6 @@ check.update.noci=[\!] Impossible de se connecter au ci pour v\u00A8\u00A6rifier
 update.latest=Aucune mise \u00E0 jour trouv\u00E9e, derni\u00E8re version \: ({0}) Version actuelle \: ({1})
 update.stopcheck=Si vous ne voulez pas activer la v\u00E9rification automatique des mises \u00E0 jour, d\u00E9finissez check_update dans mohist-config/mohist.yml \u00E0 false
 pluginscommand.des=Obtient une liste des plugins ex\u00A8\u00A6cut\u00A8\u00A6s sur le serveur et le gestionnaire de plugins
-pluginscommand.des=Obtient une liste des plugins ex\u00E9cut\u00E9s sur le serveur et le gestionnaire de plugins
 pluginscommand.load=\u00A76/{0} load <plugin> \u00A7b- \u00A7aChargement du plugin (Nom du fichier)
 pluginscommand.unload=\u00A76/{0} unload <plugin> \u00A7b- \u00A7aArr\u00EAt du plugin (Nom du fichier)
 pluginscommand.reload=\u00A76/{0} reload <plugin> \u00A7b- \u00A7aRehargement du plugin (Nom du fichier)
@@ -62,3 +61,14 @@ bukkit.plugin.loading.info=Loading Bukkit plugins, please wait...
 bukkit.plugin.loading=Loading %s
 bukkit.plugin.disabling=Disabling %s
 bukkit.plugin.enabling=Enabling
+bukkit.version.servername=This server is running
+bukkit.version.version=  version
+bukkit.version.apiversion= (Implementing API version
+world.preparingSpawn=Preparing spawn area: {}%
+world.time.elapsed=Time elapsed: {} ms
+networksystem.1=Using epoll channel type
+networksystem.2=Using default channel type
+spigotconfig.debug.enabled=Debug logging is enabled
+spigotconfig.debug.disabled=Debug logging is disabled
+spigotconfig.ping.sample=Server Ping Player Sample Count:
+spigotconfig.thread.io=Using {0} threads for Netty based IO
