--- a/src/main/resources/lang/message_zh_CN.properties
+++ b/src/main/resources/lang/message_zh_CN.properties
@@ -63,3 +63,14 @@ bukkit.plugin.loading.info=\u6B63\u5728\u52A0\u8F7DBukkit\u63D2\u4EF6, \u8BF7\u7
 bukkit.plugin.loading=\u6B63\u5728\u52A0\u8F7D %s
 bukkit.plugin.disabling=\u6B63\u5728\u7981\u7528 %s
 bukkit.plugin.enabling=\u6B63\u5728\u542F\u7528
+bukkit.version.servername=\u8FD9\u4E2A\u670D\u52A1\u5668\u6838\u5FC3\u4E3A:
+bukkit.version.version= \u7248\u672C:
+bukkit.version.apiversion= (\u5B9E\u884C\u4E2D\u7684bukkitAPI\u7248\u672C :
+world.preparingSpawn=\u51C6\u5907\u751F\u6210\u533A\u57DF: {}%
+world.time.elapsed=\u8017\u65F6: {}ms
+networksystem.1=\u4F7F\u7528epoll\u9891\u9053\u7C7B\u578B
+networksystem.2=\u4F7F\u7528\u9ED8\u8BA4\u9891\u9053\u7C7B\u578B
+spigotconfig.debug.enabled=\u8C03\u8BD5\u8F93\u51FA\u542F\u7528
+spigotconfig.debug.disabled=\u8C03\u8BD5\u8F93\u51FA\u7981\u7528
+spigotconfig.ping.sample=\u670D\u52A1\u5668ping\u73A9\u5BB6\u6837\u672C\u6570:
+spigotconfig.thread.io=\u4F7F\u7528 {0} \u7EBF\u7A0B\u7684\u57FA\u4E8ENetty\u7684IO
