--- a/src/main/resources/lang/message_ru_RU.properties
+++ b/src/main/resources/lang/message_ru_RU.properties
@@ -64,3 +64,14 @@ bukkit.plugin.loading.info=Loading Bukkit plugins, please wait...
 bukkit.plugin.loading=Loading %s
 bukkit.plugin.disabling=Disabling %s
 bukkit.plugin.enabling=Enabling
+bukkit.version.servername=This server is running
+bukkit.version.version=  version
+bukkit.version.apiversion= (Implementing API version
+world.preparingSpawn=Preparing spawn area: {}%
+world.time.elapsed=Time elapsed: {} ms
+networksystem.1=Using epoll channel type
+networksystem.2=Using default channel type
+spigotconfig.debug.enabled=Debug logging is enabled
+spigotconfig.debug.disabled=Debug logging is disabled
+spigotconfig.ping.sample=Server Ping Player Sample Count:
+spigotconfig.thread.io=Using {0} threads for Netty based IO
