--- a/src/main/resources/lang/message.properties
+++ b/src/main/resources/lang/message.properties
@@ -49,3 +49,11 @@ spigotconfig.debug.enabled=Debug logging is enabled
 spigotconfig.debug.disabled=Debug logging is disabled
 spigotconfig.ping.sample=Server Ping Player Sample Count:
 spigotconfig.thread.io=Using {0} threads for Netty based IO
+server.chunk.saving=Saving chunks for level '{}'/{}
+server.chunk.saved=ThreadedAnvilChunkStorage ({}): All chunks are saved
+server.dimension.saved=ThreadedAnvilChunkStorage: All dimensions are saved
+server.stopping=Stopping server
+server.saving.player=Saving players
+server.saving.world=Saving worlds
+server.hold.ckp=Can't keep up! Is the server overloaded? Running {}ms or {} ticks behind
+server.key.pair=Generating keypair
