--- a/src/main/resources/lang/message_zh_CN.properties
+++ b/src/main/resources/lang/message_zh_CN.properties
@@ -48,3 +48,11 @@ spigotconfig.debug.enabled=\u8C03\u8BD5\u8F93\u51FA\u542F\u7528
 spigotconfig.debug.disabled=\u8C03\u8BD5\u8F93\u51FA\u7981\u7528
 spigotconfig.ping.sample=\u670D\u52A1\u5668ping\u73A9\u5BB6\u6837\u672C\u6570:
 spigotconfig.thread.io=\u4F7F\u7528 {0} \u7EBF\u7A0B\u7684\u57FA\u4E8ENetty\u7684IO
+server.chunk.saving=\u6B63\u5728\u4E3A\u6240\u6709\u4E16\u754C\u4FDD\u5B58\u533A\u5757 '{}'/{}
+server.chunk.saved=\u7EBF\u7A0B\u533A\u5757\u5B58\u50A8\u5668 ({}): \u6240\u6709\u533A\u5757\u5DF2\u4FDD\u5B58
+server.dimension.saved=\u7EBF\u7A0B\u533A\u5757\u5B58\u50A8\u5668: \u6240\u6709\u7EF4\u5EA6\u5DF2\u4FDD\u5B58
+server.stopping=\u505C\u6B62\u670D\u52A1\u5668\u4E2D
+server.saving.player=\u4FDD\u5B58\u73A9\u5BB6\u6570\u636E\u4E2D
+server.saving.world=\u4FDD\u5B58\u4E16\u754C\u5B58\u6863\u4E2D
+server.hold.ckp=\u670D\u52A1\u5668\u5361\u987F! \u670D\u52A1\u5668\u662F\u5426\u8FC7\u8F7D? \u8FD0\u884C {}ms \u6216 {} ticks
+server.key.pair=\u751F\u6210\u5BC6\u94A5\u5BF9
