--- a/src/main/resources/lang/message_fr_FR.properties
+++ b/src/main/resources/lang/message_fr_FR.properties
@@ -54,3 +54,13 @@ server.saving.player=Saving players
 server.saving.world=Saving worlds
 server.hold.ckp=Can't keep up! Is the server overloaded? Running {}ms or {} ticks behind
 server.key.pair=Generating keypair
+mc.server.starting=Starting minecraft server version {}
+mc.server.properties=Loading properties
+mc.server.game_type=Default game type: {}
+mc.server.start_on=Starting Minecraft server on {}:{}
+server.start.done=Done ({0})! For help, type "help" or "?"
+server.warn.offline=**** SERVER IS RUNNING IN OFFLINE/INSECURE MODE!
+server.warn.offline.0=The server will make no attempt to authenticate usernames. Beware.
+server.warn.offline.1=While this makes the game possible to play without internet access, it also opens up the ability for hackers to connect with any username they choose.
+server.warn.offline.2=To change this, set "online-mode" to "true" in the server.properties file.
+server.level.prepare=Preparing level "{}"
