Update lang file

--- a/src/main/resources/lang/message_es_ES.properties
+++ b/src/main/resources/lang/message_es_ES.properties
@@ -1,42 +1,42 @@
-libraries.checking.start=Comprobando librerías, espera por favor...
-libraries.check.end=Todas las librerías están bien :)
+libraries.checking.start=Comprobando librer\uFFFDas, espera por favor...
+libraries.check.end=Todas las librer\uFFFDas est\uFFFDn bien :)
 file.download.nook=La descarga de {0} ha fallado :(
-file.download.nook.md5=La descarga de {0} ha fallado porque el MD5 de este archivo es {1} y debería ser {2}. El archivo se ha eliminado por medidas de seguridad.
-download.file=Descargando archivo {0} con tamaño {1}
+file.download.nook.md5=La descarga de {0} ha fallado porque el MD5 de este archivo es {1} y deber\uFFFDa ser {2}. El archivo se ha eliminado por medidas de seguridad.
+download.file=Descargando archivo {0} con tama\uFFFDo {1}
 download.file.ok=Descarga de {0} finalizada
-banner.launch.welcomemessage=Bienvenido a Banner 1.20! - Grupo de desarrollo Mohist
+banner.launch.welcomemessage=Bienvenido a Banner 1.20.1! - Grupo de desarrollo Mohist
 banner.start.server.error=Hay un error al iniciar el servidor. Puedes pedir ayuda en el Discord o Github de Mohist.
 eula=Tienes que aceptar el eula para poder iniciar el servidor. Escribe true para continuar.
-eula.text=Cambiando la configuración de abajo a true estarías aceptando el EULA ({0}).
+eula.text=Cambiando la configuraci\uFFFDn de abajo a true estar\uFFFDas aceptando el EULA ({0}).
 file.download.percentage=Descargando {0} - {1}%
 libraries.global.percentage=Porcentaje global >
 update.check=Comprobando actualizaciones...
 update.stopcheck=Si no quieres comprobar actualizaciones, cambia check_update en banner-config/banner.yml a false
-update.latest=No se han encontrado actualizaciones, última versión: ({0}) versión actual: ({1})
-update.detect=La última versión de Banner es {0} pero tienes {1}. La última versión se ha construido sobre {2}. Deberías actualizar para arreglar bugs recientes
+update.latest=No se han encontrado actualizaciones, \uFFFDltima versi\uFFFDn: ({0}) versi\uFFFDn actual: ({1})
+update.detect=La \uFFFDltima versi\uFFFDn de Banner es {0} pero tienes {1}. La \uFFFDltima versi\uFFFDn se ha construido sobre {2}. Deber\uFFFDas actualizar para arreglar bugs recientes
 check.update.noci=[!] No se ha podido conectar al servicio web de Mohist.
 pluginscommand.des=Obtiene una lista de los plugins instalador en el servidor
 pluginscommand.1=Plugins
 pluginscommand.load=\u00A76/{0} cargar <plugin> \u00A7b- \u00A7aCarga un plugin (File name)
 pluginscommand.unload=\u00A76/{0} des-cargar <plugin> \u00A7b- \u00A7aDes-carga un plugin (Plugin name)
 pluginscommand.reload=\u00A76/{0} recargar <plugin> \u00A7b- \u00A7aDes-carga y carga un plugin (Plugin name)
-pluginscommand.loaded=\u00A7a{0} {1} cargó satisfactoriamente.
-pluginscommand.unloaded=\u00A7a{0} {1} des-cargó satisfactoriamente.
-pluginscommand.reloaded=\u00A7a{0} recargó satisfactoriamente.
+pluginscommand.loaded=\u00A7a{0} {1} carg\uFFFD satisfactoriamente.
+pluginscommand.unloaded=\u00A7a{0} {1} des-carg\uFFFD satisfactoriamente.
+pluginscommand.reloaded=\u00A7a{0} recarg\uFFFD satisfactoriamente.
 pluginscommand.noplugin=\u00A7cNo existe el plugin: {0}
 pluginscommand.nofile=\u00A7cNo existe el archivo: {0}
 pluginscommand.noyml=\u00A7cEl archivo .jar no contiene el archivo plugin.yml: {0}.jar
-pluginscommand.alreadyloaded=\u00A7c{0} ya está cargado!
+pluginscommand.alreadyloaded=\u00A7c{0} ya est\uFFFD cargado!
 pluginscommand.notload=\u00A7cError al cargar {0}! (Comprueba la consola para los detalles.)
 pluginscommand.notunload=\u00A7cError al des-cargar {0}! (Comprueba la consola para los detalles.)
 pluginscommand.nojar=\u00A7c{0} no se encuentra su archivo .jar
 pluginscommand.unloaderror=\u00A7cHa ocurrido un error mientras se des-cargaba {0}!
 pluginscommand.reloaderror=\u00A7cHa ocurrido un error mientras se recargaba {0}!
-load.libraries=Cargando librerías, espera por favor...
-server.region.prepare=Preparando la región inicial para la dimensión {}
-spigot.lib.loading=[{}] Cargando {} librerías... espera por favor
-spigot.lib.found=[{}] Librerías encontradas {}
-spigot.lib.loaded=[{}] Librerías cargadas {}
+load.libraries=Cargando librer\uFFFDas, espera por favor...
+server.region.prepare=Preparando la regi\uFFFDn inicial para la dimensi\uFFFDn {}
+spigot.lib.loading=[{}] Cargando {} librer\uFFFDas... espera por favor
+spigot.lib.found=[{}] Librer\uFFFDas encontradas {}
+spigot.lib.loaded=[{}] Librer\uFFFDas cargadas {}
 banner.event_handler.register=Registrando Banner Event Dispatchers...
 bukkit.plugin.loading.info=Cargando Bukkit plugins, por favor espera...
 bukkit.plugin.loading=Cargando %s
