Auto Remap crash report

--- a/src/main/resources/lang/message.properties
+++ b/src/main/resources/lang/message.properties
@@ -42,3 +42,37 @@ bukkit.plugin.loading.info=Loading Bukkit plugins, please wait...
 bukkit.plugin.loading=Loading %s
 bukkit.plugin.disabling=Disabling %s
 bukkit.plugin.enabling=Enabling
+stackdeobf.requesting=Requesting {}...
+stackdeobf.received=Received {} bytes ({}) with status {} from {} in {}ms
+stackdeobf.verifying=Verifying cache of {} mappings...
+stackdeobf.verified=Verified cache of {} mappings (took {}ms)
+stackdeobf.parsing=Parsing {} mappings...
+stackdeobf.parsed=Parsed {} mappings (took {}ms)
+stackdeobf.caching=Caching {} mappings...
+stackdeobf.cached=Cached {} mappings (took {}ms)
+stackdeobf.download.already=Mappings for {} build {} are already downloaded
+stackdeobf.downloading=Downloading {} mappings jar for build {}...
+stackdeobf.getbuild=Latest build for {} is already cached ({} hour(s) ago, refresh in {} hour(s))
+stackdeobf.refreshing=Refreshing latest {} build (last refresh was {} hour(s) ago)...
+stackdeobf.fetching=Fetching latest {} build...
+stackdeobf.cached.lastest=Cached latest {} build version: {}
+stackdeobf.cantfind=Can't find
+stackdeobf.mappings.version=mappings for minecraft version
+stackdeobf.cantparse=Can't parse response from
+stackdeobf.for=for
+stackdeobf.inject.logger=Injecting into root logger...
+stackdeobf.downloading.intermediary=Downloading intermediary mappings for {}...
+stackdeobf.mojang.license=By enabling mojang mappings, you agree to their license:
+stackdeobf.invalid.mcversion=Invalid minecraft version:
+stackdeobf.mcversion.notfound=(not found in mojang version manifest)
+stackdeobf.creating=Creating asynchronous mapping cache executor...
+stackdeobf.cached.mappings=Cached mappings have been built (took {}ms)
+stackdeobf.classes=Classes:
+stackdeobf.methods=Methods:
+stackdeobf.fields=Fields:
+stackdeobf.shutting.down=Shutting down asynchronous mapping cache executor...
+stackdeobf.mojang.licenseheader.1=(c) 2020 Microsoft Corporation.These mappings are provided "as-is" and you bear the risk of using them.
+stackdeobf.mojang.licenseheader.2=You may copy and use the mappings for development purposes, but you may not redistribute the mappings complete and unmodified.
+stackdeobf.mojang.licenseheader.3=Microsoft makes no warranties, express or implied, with respect to the mappings provided here.
+stackdeobf.mojang.licenseheader.4=Use and modification of this document or the source code (in any form) of Minecraft: Java Edition is governed by
+stackdeobf.mojang.licenseheader.5=the Minecraft End User License Agreement available at https://account.mojang.com/documents/minecraft_eula.
