--- a/src/main/resources/lang/message_zh_CN.properties
+++ b/src/main/resources/lang/message_zh_CN.properties
@@ -41,3 +41,37 @@ bukkit.plugin.loading.info=\u6B63\u5728\u52A0\u8F7DBukkit\u63D2\u4EF6, \u8BF7\u7
 bukkit.plugin.loading=\u6B63\u5728\u52A0\u8F7D %s
 bukkit.plugin.disabling=\u6B63\u5728\u7981\u7528 %s
 bukkit.plugin.enabling=\u6B63\u5728\u542F\u7528
+stackdeobf.requesting=\u6B63\u5728\u8BF7\u6C42 {}...
+stackdeobf.received=\u63A5\u53D7\u5230 {} \u5B57\u8282 ({}) \u72B6\u6001 {} \u6765\u81EA\u4E8E {} in {}ms
+stackdeobf.verifying=\u9A8C\u8BC1\u7F13\u5B58\u5173\u4E8E {} \u6620\u5C04...
+stackdeobf.verified=\u5DF2\u7ECF\u9A8C\u8BC1 {} \u6620\u5C04\u7F13\u5B58 (\u82B1\u8D39 {}ms)
+stackdeobf.parsing=\u5206\u6790 {} \u6620\u5C04...
+stackdeobf.parsed=\u5DF2\u7ECF\u5206\u6790 {} \u6620\u5C04 (\u82B1\u8D39 {}ms)
+stackdeobf.caching=\u6B63\u5728\u7F13\u5B58 {} \u6620\u5C04...
+stackdeobf.cached=\u5DF2\u7F13\u5B58 {} \u6620\u5C04 (\u82B1\u8D39 {}ms)
+stackdeobf.download.already=\u6620\u5C04\u5BF9\u4E8E {} \u6784\u5EFA {} \u5DF2\u7ECF\u88AB\u4E0B\u8F7D
+stackdeobf.downloading=\u6B63\u5728\u4E0B\u8F7D {} \u6620\u5C04 jar \u5BF9\u4E8E\u6784\u5EFA {}...
+stackdeobf.getbuild=\u4E0A\u4E00\u4E2A\u6784\u5EFA\u5173\u4E8E {} \u5DF2\u7ECF\u88AB\u7F13\u5B58\u5728 ({} \u5C0F\u65F6\u4E4B\u524D, \u5237\u65B0\u5728 {} \u5C0F\u65F6)
+stackdeobf.refreshing=\u6B63\u5728\u5237\u65B0\u6700\u65B0\u7684 {} \u6784\u5EFA (\u4E0A\u6B21\u6784\u5EFA\u5728 {} \u5C0F\u65F6\u4E4B\u524D)...
+stackdeobf.fetching=\u62C9\u53D6\u6700\u65B0\u7684 {} \u6784\u5EFA...
+stackdeobf.cached.lastest=\u7F13\u5B58\u7684\u6700\u65B0\u7684 {} \u6784\u5EFA\u7248\u672C: {}
+stackdeobf.cantfind=\u65E0\u6CD5\u627E\u5230
+stackdeobf.mappings.version=\u5BF9\u4E8E\u8BE5MC\u7248\u672C\u7684\u6620\u5C04
+stackdeobf.cantparse=\u65E0\u6CD5\u89E3\u6790\u6765\u81EA\u7684\u54CD\u5E94
+stackdeobf.for=\u5BF9\u4E8E
+stackdeobf.inject.logger=\u6B63\u5728\u6CE8\u5165Logger...
+stackdeobf.downloading.intermediary=\u6B63\u5728\u4E0B\u8F7D\u4E2D\u95F4\u540D\u6620\u5C04\u5BF9\u4E8E {}...
+stackdeobf.mojang.license=\u901A\u8FC7\u542F\u7528mojang\u6620\u5C04\uFF0C\u60A8\u5C06\u540C\u610F\u4ED6\u4EEC\u7684\u8BB8\u53EF\u8BC1\uFF1A
+stackdeobf.invalid.mcversion=\u65E0\u6548\u7684MC\u7248\u672C:
+stackdeobf.mcversion.notfound=(\u5728mojang\u7248\u672C\u6E05\u5355\u4E2D\u627E\u4E0D\u5230)
+stackdeobf.creating=\u6B63\u5728\u521B\u5EFA\u5F02\u6B65\u6620\u5C04\u7F13\u5B58\u6267\u884C\u5668...
+stackdeobf.cached.mappings=\u5DF2\u5EFA\u7ACB\u7F13\u5B58\u6620\u5C04 (\u82B1\u8D39 {}ms)
+stackdeobf.classes=\u7C7B\u6570\u91CF:
+stackdeobf.methods=\u65B9\u6CD5\u6570\u91CF:
+stackdeobf.fields=\u5B57\u6BB5\u6570\u91CF:
+stackdeobf.shutting.down=\u6B63\u5728\u5173\u95ED\u5F02\u6B65\u6620\u5C04\u7F13\u5B58\u6267\u884C\u5668...
+stackdeobf.mojang.licenseheader.1=\uFF08c\uFF09 2020 Microsoft Corporation\u3002\u8FD9\u4E9B\u6620\u5C04\u662F\u201C\u6309\u539F\u6837\u201D\u63D0\u4F9B\u7684\uFF0C\u60A8\u5C06\u627F\u62C5\u4F7F\u7528\u5B83\u4EEC\u7684\u98CE\u9669\u3002
+stackdeobf.mojang.licenseheader.2=\u60A8\u53EF\u4EE5\u51FA\u4E8E\u5F00\u53D1\u76EE\u7684\u590D\u5236\u548C\u4F7F\u7528\u6620\u5C04\uFF0C\u4F46\u4E0D\u80FD\u5B8C\u6574\u4E14\u672A\u7ECF\u4FEE\u6539\u5730\u91CD\u65B0\u5206\u53D1\u6620\u5C04\u3002
+stackdeobf.mojang.licenseheader.3=\u5FAE\u8F6F\u516C\u53F8\u5BF9\u6B64\u5904\u63D0\u4F9B\u7684\u6620\u5C04\u4E0D\u4F5C\u4EFB\u4F55\u660E\u793A\u6216\u6697\u793A\u7684\u4FDD\u8BC1\u3002
+stackdeobf.mojang.licenseheader.4=\u4F7F\u7528\u548C\u4FEE\u6539\u672C\u6587\u6863\u6216\u6211\u7684\u4E16\u754CJava\u7248\u672C\u7684\u6E90\u4EE3\u7801\uFF08\u4EE5\u4EFB\u4F55\u5F62\u5F0F\uFF09\u53D7
+stackdeobf.mojang.licenseheader.5=\u5728https://account.mojang.com/documents/minecraft_eula\u7684Minecraft\u6700\u7EC8\u7528\u6237\u8BB8\u53EF\u534F\u8BAE\u51B3\u5B9A
